meegotouchhome (0.24.4~1) unstable; urgency=low

  * [UNRELEASED]

 -- Eetu Lehmusvuo <ext-eetu.6.lehmusvuo@nokia.com>  Mon, 18 Apr 2011 10:24:54 +0300

meegotouchhome (0.24.3-1) unstable; urgency=low

  * Fixes: NB#247974 - Moving launcher button in launcher edit mode should be stored to data store

 -- Eetu Lehmusvuo <ext-eetu.6.lehmusvuo@nokia.com>  Mon, 18 Apr 2011 10:02:26 +0300

meegotouchhome (0.24.2-1) unstable; urgency=high

  * Fixes: NB#247083 - Switcher order incorrect after application switch

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Thu, 14 Apr 2011 16:42:44 +0300

meegotouchhome (0.24.1-1) unstable; urgency=low

  * Added uninstall state to launcher.

 -- Janne Sakko <ext-janne.2.sakko@nokia.com>  Wed, 13 Apr 2011 15:20:20 +0300

meegotouchhome (0.24.0-1) unstable; urgency=low

  * Fixes: NB#232069 - Defects found in coverity run from 1. March 2011
  * Fixes: NB#241025 - COREWEB: /usr/bin/meegotouchhome 'SwipeSwitcherButtonModel::setEditModeEnabled SwipeSwitcherButton::setEditModeEnabled SwipeSwitcherView::addButtonInLayout SwipeSwitcherView::updateLayout SwipeSwitcherView::updateData'

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Tue, 12 Apr 2011 11:17:23 +0300

meegotouchhome (0.23.24-1) unstable; urgency=low

  * LauncherPage inheritable 

 -- Eetu Lehmusvuo <ext-eetu.6.lehmusvuo@nokia.com>  Sat, 11 Apr 2011 09:49:07 +0300

meegotouchhome (0.23.23-1) unstable; urgency=low

  * Fixes: NB#242688 - UI glitch in Controlpanel textinput settings

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Sat, 09 Apr 2011 19:58:47 +0300

meegotouchhome (0.23.22-1) unstable; urgency=low

  * Fixes: NB#232753 - COREWEB: /usr/bin/meegotouchhome 'QGLContextPrivate::bindTexture QGL2PaintEngineExPrivate::updateBrushTexture QGL2PaintEngineExPrivate::prepareForDraw QGL2PaintEngineExPrivate::fillQPaintEngineEx::draw'

 -- Pauli Lehtinen <pauli.lehtinen@nokia.com>  Fri, 08 Apr 2011 16:06:00 +0300

meegotouchhome (0.23.21-1) unstable; urgency=low
