@@ -1,6 +1,7 @@
 meegotouchhome (0.24.4~1) unstable; urgency=low
 
   * [UNRELEASED]
+  * Fixes: NB#247923 - Qt icon theme name does not follow libmeegotouch theme name
 
  -- Eetu Lehmusvuo <ext-eetu.6.lehmusvuo@nokia.com>  Mon, 18 Apr 2011 10:24:54 +0300
 
